finish firebase application for article

--- a/src/app/post-list/post-list.component.html
+++ b/src/app/post-list/post-list.component.html
@@ -1,1 +1,5 @@
-<p>post-list works!</p>
+<main *ngFor="let post of this.posts">
+  <app-post [post]="post"></app-post>
+</main>
+<div id="list-end" #listEnd></div>
+
