--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,1 +1,5 @@
-<p>post works!</p>
+<article *ngIf="this.post">
+  <h1>{{ this.post.title | uppercase }}</h1>
+  <p>{{ this.post.body }}</p>
+  <p><small>{{ this.post.createdAt | date }}</small></p>
+</article>
