--- a/src/app/new-post/new-post.component.css
+++ b/src/app/new-post/new-post.component.css
@@ -1,9 +1,15 @@
 :host {
   display: flex;
   flex-direction: column;
-  margin: 1rem 0;
+  margin: 1rem auto;
   --radius: 4px;
   --primary-color: lightgray;
+  --secondary-color: rgb(241, 241, 241);
+  max-width: 800px;
+  background-color: var(--secondary-color);
+  border: 1px solid var(--secondary-color);
+  border-radius: var(--radius);
+  padding: 1rem;
 }
 
 button {
