improve css for add form and use rxjs for document listeners

--- a/src/app/new-post/new-post.component.css
+++ b/src/app/new-post/new-post.component.css
@@ -12,6 +12,10 @@
   padding: 1rem;
 }
 
+.hide {
+  display: none;
+}
+
 button {
   background-color: var(--primary-color);
   border: 1px solid var(--primary-color);
