--- a/src/app/new-post/new-post.component.html
+++ b/src/app/new-post/new-post.component.html
@@ -3,7 +3,7 @@
     <path d="M22.5 38V25.5H10v-3h12.5V10h3v12.5H38v3H25.5V38Z" />
   </svg>
 </button>
-<form (click)="$event.stopPropagation()" *ngIf="this.show" (submit)="this.handleFormSubmission($event)">
+<form (click)="$event.stopPropagation()" [class.hide]="!this.show" (submit)="this.handleFormSubmission($event)">
   <label for="title">Title</label>
   <input type="text" id="title" name="title" maxlength="255" minlength="1" required>
   <label for="body">Body</label>
