--- a/src/app/posts/post/post.component.html
+++ b/src/app/posts/post/post.component.html
@@ -1,5 +1,5 @@
 <article *ngIf="this.post">
   <h1>{{ this.post.title | uppercase }}</h1>
-  <p>{{ this.post.body }}</p>
+  <div [innerHTML]="this.post.body | markdown | async"></div>
   <p><small>{{ this.post.createdAt | date }}</small></p>
 </article>
