add lit markdown editor

--- a/src/app/posts/new-post/new-post.component.html
+++ b/src/app/posts/new-post/new-post.component.html
@@ -7,7 +7,7 @@
   <label for="title">Title</label>
   <input type="text" id="title" name="title" maxlength="255" minlength="1" required>
   <label for="body">Body</label>
-  <textarea name="body" id="body" minlength="1" maxlength="10000" required></textarea>
+  <lit-markdown-editor style="height: 400px; margin-bottom: 1rem;" name="body" id="body" minlength="1" maxlength="10000" required></lit-markdown-editor>
   <button type="submit"><svg xmlns="http://www.w3.org/2000/svg" height="24" width="24" viewBox="0,0,48,48">
       <path
         d="M22.5 34h3v-8.5H34v-3h-8.5V14h-3v8.5H14v3h8.5ZM9 42q-1.2 0-2.1-.9Q6 40.2 6 39V9q0-1.2.9-2.1Q7.8 6 9 6h30q1.2 0 2.1.9.9.9.9 2.1v30q0 1.2-.9 2.1-.9.9-2.1.9Zm0-3h30V9H9v30ZM9 9v30V9Z" />
